--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
 
+    implementation 'com.github.f0ris.sweetalert:library:1.6.2'
+
 
     def room_version = "2.2.5"
 
